# CmakeConfigExampleGTest

./: CMakeLists.txt  GTestConfig.cmake  main.cpp
